# erpnext_taskview

./: .gitignore  .pre-commit-config.yaml  README.md  TYPESCRIPT_README.md  flake.nix  package.json  pyproject.toml  tsconfig.json  update-assets.mjs  vite.config.ts
erpnext_taskrunner/erpnext_taskrunner/: __init__.py  get.sql
erpnext_taskrunner/public/js/: TaskRunner.vue  app.bundle.ts
erpnext_taskrunner/public/js/assets/js/: script.ts  task.ts  taskrunner.ts  (+1 more)
erpnext_taskrunner/public/js/components/: Task.vue  TimeLogger.vue
erpnext_taskrunner/public/js/types/: frappe.d.ts
erpnext_taskview/: __init__.py  hooks.py  modules.txt
erpnext_taskview/erpnext_taskview/: __init__.py  api.py  get.sql  models.py
erpnext_taskview/erpnext_taskview/custom/: project.json  task.json  timesheet_detail.json  timesheet_detail.py  todo.json
erpnext_taskview/erpnext_taskview/development_assets/: get copy.sql  get.sql  tree_sample.json
erpnext_taskview/public/: compile.readme
erpnext_taskview/public/js/: TaskRunner.vue  TaskView.vue  app.bundle.js  app.bundle.ts  task-controls.css  taskview.bundle.ts  timer-controls.css  timerDialog.ts  timerStore.ts  timerdock.bundle.ts  treeState.ts  types.ts  work_here.txt
erpnext_taskview/public/js/components/: AssignTo.vue  PinnedView.vue  Sidebar.vue  SidebarNode.vue  Task.vue  TaskViewHeader.vue  TaskViewRow.vue  TimeLogger.vue  TimerDock.vue  TimerWidget.vue  ViewModeSwitcher.vue
erpnext_taskview/public/js/types/: frappe.d.ts  shims-css.d.ts
erpnext_taskview/templates/: __init__.py
erpnext_taskview/utils/: json_functions.py
(+15 files in other folders)
